PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add DeleteOutputBefore and DeleteOutputAfter options to the result parser
pts-core: Fix for run-random-tests sub-command

Phoronix Test Suite 8.0.0 Milestone 1
8 March 2018

pts-core: Rewritten Windows support
pts-core: Add ~/install-message support where if a test profile installer writes there, that message will in turn be shown to the user on test install
pts-core: Support for using Cygwin's bash interpreter on Windows systems for better test profile parsing support
pts-core: When running on Windows, add new "windows/" OpenBenchmarking.org test repository
pts-core: Introduce basic phoronix-test-suite shell for easier PTS experience
pts-core: Allow XInclude support for test suites
perf_per_dollar: Allow calculating cloud costs / perf-per via COST_PERF_PER_HOUR= environment variable
phodevi: Cavium ThunderX detection

Phoronix Test Suite 7.8.0-Folldal
14 February 2018

pts-core: Various minor fixes
pts_Graph: Fix vertical bar graphs on many bars to be rendered

Phoronix Test Suite 7.8.0 Milestone 3
5 February 2018

pts-core: Fix crash in stress-run when PHP PCNTL is missing
pts-core: When installing a test that is marked deprecated/experimental/broken, ensure to convey that to the user
pts-core: When installing a test that is of license retail/restricted, ensure to convey that to the user
pts-core: Don't show tests in `list-available-tests` / `list-tests` that are not verified
pts-core: Improvements to `info` sub-command for test profiles in highlighting tests that may have problems and also show pre/post messages
pts_Graph: Fix when manually forcing line graphs sometimes still yielding bar graphs
phodevi: spectre_v1 and spectre_v2 protection reporting
phodevi: LXQt desktop detection
phodevi: Don't cache the compiler in case external dependencies install a new compiler, etc

Phoronix Test Suite 7.8.0 Milestone 2
14 January 2018
